<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_zakat"
        android:title="@string/zakat_calculator"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_cashbook"
        android:title="@string/cashbook"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_cheques"
        android:title="@string/cheques"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_business_settings"
        android:title="@string/business_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_backup"
        android:title="@string/backup_restore"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_app_lock"
        android:title="@string/app_lock"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_recycle_bin"
        android:title="@string/recycle_bin"
        app:showAsAction="never" />
</menu>
