<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_khata"
        android:icon="@drawable/ic_nav_khata"
        android:title="@string/nav_khata" />
    <item
        android:id="@+id/nav_cashbook"
        android:icon="@drawable/ic_nav_cashbook"
        android:title="@string/nav_cashbook" />
    <item
        android:id="@+id/nav_cheques"
        android:icon="@drawable/ic_nav_cheque"
        android:title="@string/nav_cheques" />
    <item
        android:id="@+id/nav_plans"
        android:icon="@drawable/ic_nav_plans"
        android:title="@string/nav_plans" />
    <item
        android:id="@+id/nav_more"
        android:icon="@drawable/ic_nav_more"
        android:title="@string/nav_more" />
</menu>
