<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_customer_qr"
        android:title="@string/customer_qr"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_report"
        android:title="@string/report"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_party_type"
        android:title="@string/change_party_type"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_credit_limit"
        android:title="@string/set_credit_limit"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_select_entries"
        android:title="@string/select_entries_to_delete"
        app:showAsAction="never" />
</menu>
